syntax = "proto3";
package grpc_proof;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/lmullen/cchc/sketches/grpc_proof/grpcproof";

message Document {
  string word = 1;
  google.protobuf.Timestamp sent = 2;
}

message DocumentAcknowledgement {
}

service Transmitter {
  // Send a document to the receiver
  rpc ProcessDocument (Document) returns (DocumentAcknowledgement) {};
}
